# logwise

./: LICENSE  Pipfile  README.md  pyproject.toml
src/logwise/: ai.py  analyze.py  capture.py  main.py  rules.py
