[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logwise"
version = "0.1.0"
description = "Intelligent Log Analyzer CLI Tool"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "typer==0.12.5",
    "openai==1.52.2",
]

[project.scripts]
logwise = "logwise.main:app"