[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logwise"
version = "0.1.0"
description = "Intelligent Log Analyzer CLI Tool"
authors = [{ name = "Dhanush Ballanki", email = "dhanushballanki14@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "typer==0.12.5",
    "google-genai==1.59.0",
]

[project.scripts]
logwise = "logwise.main:app"